--- a/front/src/index.html
+++ b/front/src/index.html
@@ -7,6 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <canvas height="400px" width="500px" id="canvas"></canvas>
+    <canvas id="canvas"></canvas>
   </body>
 </html>
